2008-10-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Håvard Graff <havard dot graff at tandberg dot com>

	* gst/rtpmanager/gstrtpbin-marshal.list:
	Add marshaller for new action signal.

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_get_internal_session),
	(gst_rtp_bin_class_init):
	* gst/rtpmanager/gstrtpbin.h:
	Add action signal to retrieve the internal RTPSession object.

	* gst/rtpmanager/gstrtpsession.c: (gst_rtp_session_class_init),
	(gst_rtp_session_get_property), (gst_rtp_session_release_pad):
	Add property to access the internal RTPSession object.

	* gst/rtpmanager/rtpsession.c: (rtp_session_class_init),
	(check_collision):
	* gst/rtpmanager/rtpsession.h:
	Add action signal to retrieve an RTPSource object by SSRC. 
	See #555396.

2008-10-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/selector/gstoutputselector.c:
	  Choose right pad for sending events. Fixes #555244

2008-10-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (find_session_by_pad),
	(free_session), (gst_rtp_bin_dispose), (remove_recv_rtp),
	(remove_recv_rtcp), (remove_send_rtp), (remove_rtcp),
	(gst_rtp_bin_release_pad):
	Release pads of the session manager.
	Start implementing releasing pads of gstrtpbin.

	* gst/rtpmanager/gstrtpsession.c: (remove_recv_rtp_sink),
	(remove_recv_rtcp_sink), (remove_send_rtp_sink),
	(remove_send_rtcp_src), (gst_rtp_session_release_pad):
	Implement releasing pads in gstrtpsession.

2008-10-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_jitter_buffer_sink_parse_caps):
	Only update the seqnum-base when it was not already configured for the
	streams.

2008-10-06  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac
	* ext/metadata/README:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadatatags.c:
	* ext/metadata/metadatatags.h:
	  Start using core geo tags (bump req). Fix handling of location
	  references.

	* tests/check/Makefile.am: